# deepwiki-open

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-litellm  Dockerfile-ollama-local  README.md  docker-compose-litellm.yml  docker-compose.yml  package-lock.json  package.json  本地开发.md
api/: agentic_chat.py  analysis_jobs.py  api.py  data_pipeline.py  glossary.py  mcp_server.py  trace_agent.py  trace_reports.py  trace_tools.py  wiki_generator.py  wiki_jobs.py
docs/: admin-phase1-plan.md  admin-phase3-coding-engine.md  admin-review.pptx  admin.md  wiki-jobs-api.md
services/identity/: Dockerfile  README.md  pyproject.toml
services/identity/app/: config.py  ldap_auth.py  main.py  models.py  schemas.py
services/identity/app/routers/: audit.py  auth.py  projects.py  users.py
services/identity/migrations/: env.py
services/identity/migrations/versions/: 1e517d0cd9db_init_user_role_user_role_project_audit_.py  b89da7c4730a_tapd_user_tapd_nick_project_tapd_.py  c1a2b3d4e5f6_project_repo_meta.py
services/identity/tests/: conftest.py  test_auth_verify.py  test_ldap_auth.py
services/requirement/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/requirement/app/: auth.py  config.py  db.py  flow.py  main.py  models.py  schemas.py  state_machine.py  tapd_client.py  tapd_mapping.py
services/requirement/app/routers/: analysis.py  coding.py  requirements.py  reviews.py  tapd_sync.py
services/requirement/migrations/versions/: 3b941c3aef6c_tapd_sync_external_source_fields.py  6762071f3e6e_init_requirement_flow_event_review_.py  a7d3f0c9b210_coding_run.py
(+140 files in other folders)
