[project]
name = "requirement-service"
version = "0.1.0"
description = "AI研发管理平台 · 需求域服务（模块一/三：需求管理中心 + 评审协作）"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "pymysql>=1.1",
    "alembic>=1.13",
    "pydantic-settings>=2.2",
    "PyJWT>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
